[gd_scene load_steps=8 format=2]

[ext_resource path="res://experiments/full_64.png" type="Texture" id=1]
[ext_resource path="res://stuff/hand_card/hand_card_displayer.gd" type="Script" id=2]
[ext_resource path="res://experiments/full_256.png" type="Texture" id=3]
[ext_resource path="res://experiments/icons_64_x_64/complex_64x64.png" type="Texture" id=4]
[ext_resource path="res://experiments/placeholder_64.png" type="Texture" id=5]

[sub_resource type="CubeMesh" id=5]
size = Vector3( 1.44, 0.18, 2.56 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0.0196078, 0.14902, 0.278431, 1 )

[node name="HandCardDisplayer" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = 160.0
margin_right = -1060.0
margin_bottom = -360.0
rect_rotation = -90.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 320, 200 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="CardWorld" type="Spatial" parent="Viewport"]

[node name="Body" type="Spatial" parent="Viewport/CardWorld"]

[node name="Background" type="Sprite3D" parent="Viewport/CardWorld/Body"]
visible = false
axis = 1
double_sided = false
render_priority = -1
texture = ExtResource( 3 )

[node name="BackLayer" type="Spatial" parent="Viewport/CardWorld/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0 )

[node name="Sprite3D2" type="Sprite3D" parent="Viewport/CardWorld/Body/BackLayer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0655775, -0.00574944, 0.444552 )
axis = 1
texture = ExtResource( 5 )

[node name="Sprite3D2" type="Sprite3D" parent="Viewport/CardWorld/Body/BackLayer/Sprite3D2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00518955, 0 )
modulate = Color( 0.176471, 0.85098, 0.533333, 1 )
axis = 1
texture = ExtResource( 1 )

[node name="FrontLayer" type="Spatial" parent="Viewport/CardWorld/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.04, 0 )

[node name="Sprite3D" type="Sprite3D" parent="Viewport/CardWorld/Body/FrontLayer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.465137, 0.0133318, -1.08398 )
pixel_size = 0.005
axis = 1
texture = ExtResource( 4 )

[node name="Sprite3D2" type="Sprite3D" parent="Viewport/CardWorld/Body/FrontLayer/Sprite3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0184181, 0 )
modulate = Color( 0.176471, 0.329412, 0.85098, 1 )
pixel_size = 0.005
axis = 1
texture = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Viewport/CardWorld/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0943525, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 2 )

[node name="Camera" type="Camera" parent="Viewport/CardWorld"]
transform = Transform( -4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, 1, -1, 4.37114e-08, -4.37114e-08, 0, 2, 0 )
keep_aspect = 0
projection = 1
current = true
fov = 50.0
size = 3.0
